[project]
name = "hompub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "biopython>=1.86",
    "geopandas>=1.1.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "retrying>=1.4.2",
    "tqdm>=4.67.1",
    "xlrd>=2.0.2",
]
